...
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/del_album_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Album Name"
            android:textColorHint="#cccccc"
            android:textSize="20dp"
            android:inputType="textNoSuggestions|textVisiblePassword"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/del_album_okay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Okay"/>

        <Button
...
