...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/new_album_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_album"
                android:onClick="newAlbumDialog"/>

            <Button
                android:id="@+id/delete_album_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_album"
                android:onClick="deleteAlbumDialog"/>

...
